--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -7,14 +7,15 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="footer-about mt-40">
                         <div class="logo">
-                            <a href="#"><img src="assets/images/logo-2.png" alt="Logo"></a>
+                            LOGO
+                            <!-- <a href="#"><img src="assets/images/logo-2.png" alt="Logo"></a> -->
                         </div>
                         <p>Gravida nibh vel velit auctor aliquetn quibibendum auci elit cons equat ipsutis sem nibh id elit. Duis sed odio sit amet nibh vulputate.</p>
                         <ul class="mt-20">
-                            <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/cegtmalangue/"><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/cegtmalangue/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div> <!-- footer about -->
                 </div>
@@ -24,18 +25,18 @@
                             <h6>Sitemap</h6>
                         </div>
                         <ul>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Home</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>About us</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Courses</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>News</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Event</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Acceuil</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Evenements</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Partenaires</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Cooperative</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Sport Au College</a></li>
                         </ul>
                         <ul>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Gallery</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Shop</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Teachers</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Support</a></li>
-                            <li><a href="#"><i class="fa fa-angle-right"></i>Contact</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Bibiotheque</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Cours de Soutient</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Alumni</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Notre Personnel</a></li>
+                            <li><a href="#"><i class="fa fa-angle-right"></i>Orientation apres BAC</a></li>
                         </ul>
                     </div> <!-- footer link -->
                 </div>
@@ -56,7 +57,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="footer-address mt-40">
                         <div class="footer-title pb-25">
-                            <h6>Contact Us</h6>
+                            <h6>Nous Contactez </h6>
                         </div>
                         <ul>
                             <li>
@@ -64,7 +65,7 @@
                                     <i class="fa fa-home"></i>
                                 </div>
                                 <div class="cont">
-                                    <p>143 castle road 517 district, kiyev port south Canada</p>
+                                    <p>Face Hopital General De Douala</p>
                                 </div>
                             </li>
                             <li>
@@ -72,7 +73,7 @@
                                     <i class="fa fa-phone"></i>
                                 </div>
                                 <div class="cont">
-                                    <p>+3 123 456 789</p>
+                                    <p>(+237) 677 376 302</p>
                                 </div>
                             </li>
                             <li>
@@ -80,7 +81,7 @@
                                     <i class="fa fa-envelope-o"></i>
                                 </div>
                                 <div class="cont">
-                                    <p>info@yourmail.com</p>
+                                    <p>infos@cegt-malangue.com</p>
                                 </div>
                             </li>
                         </ul>
@@ -95,7 +96,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="copyright text-md-left text-center pt-15">
-                        <p><a target="_blank" href="#">CEGT Malangue 2022</a> </p>
+                        <p><a target="_blank" href="#">CEGT Malangue {{date_now}} </a> </p>
                     </div>
                 </div>
                 <div class="col-md-4">
