--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -8,19 +8,19 @@
                 <div class="col-lg-8">
                     <div class="header-contact text-lg-left text-center">
                         <ul>
-                            <li><img src="assets/images/all-icon/call.png" alt="icon"><span>(124) 123 675 598</span></li>
-                            <li><img src="assets/images/all-icon/email.png" alt="icon"><span>info@yourmail.com</span></li>
-                            <li><img src="assets/images/all-icon/map.png" alt="icon"><span>127/5 Mark street, New york</span></li>
+                            <li><img src="assets/images/all-icon/call.png" alt="icon"><span>(+237) 677 376 302</span></li>
+                            <li><img src="assets/images/all-icon/email.png" alt="icon"><span>infos@cegt-malangue.com</span></li>
+                            <li><img src="assets/images/all-icon/map.png" alt="icon"><span>Face Hopital General De Douala</span></li>
                         </ul>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="header-social text-lg-right text-center">
                         <ul>
-                            <li><a href="#"><i class="fa fa-facebook-f"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a target="_blank" href="https://www.facebook.com/cegtmalangue/"><i class="fa fa-facebook-f"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fa fa-twitter"></i></a></li>
+                            <li><a target="_blank" href="https://www.instagram.com/cegtmalangue/"><i class="fa fa-instagram"></i></a></li>
+                            <li><a target="_blank" href="#"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -33,8 +33,9 @@
             <div class="row no-gutters">
                 <div class="col-lg-11 col-md-10 col-sm-9 col-9">
                     <nav class="navbar navbar-expand-lg">
-                        <a class="navbar-brand" href="index-3.html">
-                            <img src="assets/images/logo.png" alt="Logo">
+                        <a class="navbar-brand" href="#">
+                            LOGO
+                            <!-- <img src="assets/images/logo.png" alt="Logo"> -->
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="icon-bar"></span>
@@ -45,70 +46,60 @@
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarSupportedContent">
                             <ul class="navbar-nav ml-auto">
                                 <li class="nav-item">
-                                    <a class="active" href="index-2.html">Home</a>
-                                    <ul class="sub-menu">
+                                    <a class="active" href="#">Acceuil</a>
+                                    <!-- <ul class="sub-menu">
                                         <li><a href="index-2.html">Home 01</a></li>
                                         <li><a class="active" href="index-3.html">Home 02</a></li>
                                         <li><a href="index-4.html">Home 03</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </li>
                                 <li class="nav-item">
-                                    <a href="about.html">About us</a>
+                                    <a href="#">Evenements</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="courses.html">Courses</a>
+                                    <a href="#">Partenaires</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#">Vie Scolaire</a>
                                     <ul class="sub-menu">
-                                        <li><a href="courses.html">Courses</a></li>
-                                        <li><a href="courses-singel.html">Course Singel</a></li>
+                                        <li><a href="#">Cooperative</a></li>
+                                        <li><a href="#">Sport Au College</a></li>
+                                        <li><a href="#">Cantine</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="events.html">Events</a>
+                                    <a href="#">Services</a>
                                     <ul class="sub-menu">
-                                        <li><a href="events.html">Events</a></li>
-                                        <li><a href="events-singel.html">Event Singel</a></li>
+                                        <li><a href="#">Bibiotheque</a></li>
+                                        <li><a href="#">Cours de Soutient</a></li>
+                                        <li><a href="#">Orientation apres BAC</a></li>
                                     </ul>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="teachers.html">Our teachers</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="teachers.html">teachers</a></li>
-                                        <li><a href="teachers-singel.html">teacher Singel</a></li>
-                                    </ul>
+                                    <a href="#">Personnel</a>
+                                </li>
+                                <!-- <li class="nav-item">
+                                    <a href="#">Alumni</a>
+                                </li> -->
+                                <li class="nav-item">
+                                    <a href="#">A propos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="blog.html">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog.html">Blog</a></li>
-                                        <li><a href="blog-singel.html">Blog Singel</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="shop.html">Shop</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="shop.html">Shop</a></li>
-                                        <li><a href="shop-singel.html">Shop Singel</a></li>
-                                    </ul>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="contact.html">Contact</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="contact.html">Contact Us</a></li>
-                                        <li><a href="contact-2.html">Contact Us 2</a></li>
-                                    </ul>
+                                    <a href="#">Contact</a>
                                 </li>
                             </ul>
                         </div>
                     </nav> <!-- nav -->
                 </div>
-                <div class="col-lg-1 col-md-2 col-sm-3 col-3">
+                <!-- <div class="col-lg-1 col-md-2 col-sm-3 col-3">
                     <div class="right-icon text-right">
                         <ul>
                             <li><a href="#" id="search"><i class="fa fa-search"></i></a></li>
                             <li><a href="#"><i class="fa fa-shopping-bag"></i><span>0</span></a></li>
                         </ul>
-                    </div> <!-- right icon -->
-                </div>
+                    </div> 
+                </div> -->
+                <!-- right icon -->
             </div> <!-- row -->
         </div> <!-- container -->
     </div>
